--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,14 +283,6 @@ padding: 0 10px;
     margin-top: 0;
 }
 
-.latest_update img{
-    max-width: 90px;
-    max-height: 70px;
-}
-.footer_copyright img{
-    max-width: 150px;
-    max-height: 80px;
-}
 /* ------------------- index page css ---------------------*/
 .container{
     max-width: 1350px;
@@ -476,3 +468,42 @@ padding: 17px;
     .articles-list,.tuts-list{
         margin-bottom: 30px;
     }
+
+
+    /* blog setting */
+
+    .blog_box .card_body{
+        padding: 10px;
+    }
+    .blog_box .card-text{display: flex; justify-content: space-between;    font-size: 17px;
+        margin-bottom: 6px;
+       }
+    .blog_box .card-title{font-size: 18px;    }
+    .blog_box .blogbox_heading{display: flex; justify-content: space-between; padding: 10px;    padding: 31px;}
+    .blog_box .blogbox_heading h1{margin-bottom: 0;}
+    .blog_box .blogbox_heading .dropdown{margin:auto 0;}
+    .blog_box .btn-secondary{    background-color: #21242E !important;}
+    .blog_center{
+        margin-bottom: 20px;
+    }
+    .blog_box .dropdown-menu{
+        transform: translate3d(-50px, 38px, 0px) !important;
+    }
+
+    .read_title h1{ font-size: 1.6rem; margin-bottom: 15px;}
+    .readblog_img img{max-height: 500px; width: 100%;}
+    .readblog_date p{display: flex; justify-content: space-between;font-size: 18px; margin-top: 15px;}
+
+    .blog_readbox{    padding-top: 30px;}
+    .read_box{margin-top: 20px;}
+    .read_box .card_body{
+        padding-bottom: 15px;
+    }
+    .read_box .blogbox_heading {
+        margin-bottom: 13px;
+    }
+    .read_box .card-text{display: flex; justify-content: space-between;    font-size: 17px;
+        margin-bottom: 6px;
+       }
+    .read_box .blogbox_heading h1{margin-bottom: 20 !important; font-size: 1.6rem;}
+
